# throngs

./: .env.example  .gitignore  CLAUDE.md  README.md  ideas.txt  pyproject.toml  quick_run.sh  simulations.sh
diary_entries/carlos/: day-1.txt  day-2.txt  day-3.txt  day-4.txt  day-5.txt
diary_entries/jake/: day-1.txt  day-2.txt  day-3.txt  day-4.txt  day-5.txt
diary_entries/linda/: day-1.txt  day-2.txt  day-3.txt  day-4.txt  day-5.txt
diary_entries/martha/: day-1.txt  day-2.txt  day-3.txt  day-4.txt  day-5.txt
diary_entries/priya/: day-1.txt  day-2.txt  day-3.txt  day-4.txt  day-5.txt
diary_entries/sarah/: day-1.txt  day-2.txt  day-3.txt  day-4.txt  day-5.txt
misc/: config.yaml  requirements.txt
persona-single/: credentials.json  default_personas.json  relations_example.json  street_config.json
persona-single/software_stacks/: plumber_stack.json
personas/: credentials.json  default_personas.json  relations_example.json  street_config.json
specs/: 06_Throngs - Motor Errors & Input Clumsiness.md  07_Throngs - Swarm Command Center (UI Dashboard).md  08_Throngs - Contextual Distraction & State Management.md  09_Throngs - Reading Patterns & Skimming.md  0_executive_summary.md  1_Throngs-high-level.md  2_Throngs - Autonomous Executive Function.md  3_Throngs - Cognitive Memory Subsystem.md  4_Throngs - Hybrid Visual Perception Layer.md  5_Throngs - Human Flaws & Environmental Constraints Module.md
throngs/: __init__.py  config.py  context.py  llm.py  local_server.py  logging_config.py  main.py  protocols.py  relations.py  runner.py  schemas.py  workspace.py
(+57 files in other folders)
