[project]
name = "throngs"
version = "0.1.0"
description = "Synthetic Swarm - AI-Driven UX Simulation Engine"
authors = [
    {name = "Synthetic Swarm Team"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langgraph (>=1.0.9,<2.0.0)",
    "langchain-openai (>=1.1.10,<2.0.0)",
    "langchain-google-genai (>=4.2.1,<5.0.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "chromadb (>=1.0,<2.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "asyncio-throttle (>=1.0.2,<2.0.0)",
    "onnxruntime (<1.24)",
    "fastapi (>=0.115.0)",
    "uvicorn (>=0.30.0)",
    "httpx (>=0.27.0)",
]


[project.scripts]
throngs = "throngs.main:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
